# Document-Chat

./: .gitignore  pyproject.toml  requirements.txt
Docker/: requirements.txt
model/: DocumentAssistant.py
src/: .env.example  main.py
src/AI/llm/: LLMEnums.py  LLMProviderFactory.py
src/AI/llm/providers/: GeminiProvider.py
src/assets/files/1/: igzyjeyt87dg_file.txt
src/controllers/: BaseController.py  NLPController.py  ProcessController.py
src/helpers/: config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  DocumentAssistant.py  ProjectModel.py
src/models/db_schemes/: data_chunk.py  project.py
src/routes/: data.py  nlp.py
src/routes/schemes/: nlp.py
src/stores/llm/: LLMEnums.py
src/stores/llm/provider/: OpenAIProvider.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py
src/stores/vectordb/providers/: QdrantDBProvider.py
