[project]
name = "document-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyngrok>=7.5.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "transformers>=4.57.2",
]
