[project]
name = "document-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.5",
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "google-genai>=1.52.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "motor>=3.7.1",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "pymupdf>=1.26.6",
    "pyngrok>=7.5.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "torch>=2.9.1",
    "transformers>=4.57.2",
]
